# AI-Logistics-Fleet-Intelligence-Platform

./: .gitignore  CONFLICT_RESOLUTION.md  IMPLEMENTATION_STATUS.md  Readme.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260417_0001_initial.py
backend/app/: main.py
backend/app/ai/: delay_prediction.py  train_delay_model.py
backend/app/api/v1/: ai.py  analytics.py  auth.py  companies.py  dvr.py  fleet.py  fuel.py  health.py  invoices.py  notifications.py  router.py  shipments.py
backend/app/core/: authorization.py  config.py  dependencies.py  security.py
backend/app/models/: entities.py
backend/app/schemas/: auth.py  company.py  dvr.py  fleet.py  fuel.py  invoice.py  shipment.py
backend/app/services/: crud.py  invoice_ocr.py
backend/app/tasks/: celery_app.py  notifications.py
backend/tests/: test_authorization.py  test_health.py  test_invoice_ocr.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/dvr/: page.tsx
frontend/app/fleet/: page.tsx
frontend/app/fuel/: page.tsx
frontend/app/invoices/: page.tsx
frontend/app/login/: page.tsx
frontend/app/map/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/shipments/: page.tsx
frontend/app/team/: page.tsx
frontend/components/: kpi-card.tsx
frontend/lib/: api.ts
mobile/: pubspec.yaml
mobile/lib/: main.dart
tools/: resolve_conflicts.sh
(+6 files in other folders)
